# Complete_Practice

./: CMakeLists.txt  Doxyfile  Readme.md  rickroll_4k.jpg:Zone.Identifier
Flip_H/: CMakeLists.txt  Flip_H.cpp
Flip_V/: CMakeLists.txt  Flip_V.cpp
Framework/: CMakeLists.txt  Communication.h  TCPCommunication.cpp  TCPCommunication.h  UDPCommunication.cpp  UDPCommunication.h
Input/: CMakeLists.txt  Input.cpp
Rotate_CCW/: CMakeLists.txt  Rotate_CCW.cpp
Rotate_CW/: CMakeLists.txt  Rotate_CW.cpp
